@@ -1,4 +1,5 @@
 - library:
+  o account for packages to erase in gurpm progress bar
   o enable to have a cancel button in global progress bar dialog
 - gurpmi2:
   o enable to cancel downloads
